Fix horizontal scrollbars caused by nav bar

--- a/src/components/Settings/styles.module.scss
+++ b/src/components/Settings/styles.module.scss
@@ -25,7 +25,7 @@
   }
 
   @media (min-width: $breakpoint-tablet) {
-    width: calc(100vw - 200px);
+    width: calc(100% - var(--nav-offset-x));
     padding: var(--spacing-sm) var(--spacing-lg);
   }
 
